Update start script in package.json to use node instead of nodemon; add test script for nodemon

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "description": "make, collaborate, share forms and check stats, forms made easy!",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon index.js ",
+    "start": "node index.js ",
+    "test": "npx nodemon index.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sidharth Bhasin",
